test/scc_test/exp/semantic-errors/053.a
053.t:3:10: error: expression must have integral type